// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#toJSON converts XDR to JSON 1`] = `
Object {
  "authorize": true,
  "color": "green",
  "fee": 100,
  "lat": 37.7645352,
  "lon": -122.421069,
  "memo": Object {
    "_type": "memoText",
    "text": "hola",
  },
  "meta": Object {
    "_type": "paid",
    "price": Object {
      "d": 1,
      "n": 2,
    },
  },
  "msg": "hello world",
  "offerId": "12345",
  "opaque": "AAAB",
  "price": Object {
    "d": 1,
    "n": 2,
  },
  "signedSequence": "-1059",
  "skipList": Array [
    "AAA=",
    "AAE=",
  ],
  "theVoid": undefined,
  "varOpaque": "AAE=",
  "varSkipList": Array [
    "AAA=",
    "AAE=",
    "AQE=",
  ],
  "version": -1,
}
`;

exports[`#toJSON option with value 1`] = `
Object {
  "meta": Object {
    "_type": "rejected",
    "rejected": 2,
  },
}
`;

exports[`#toJSON option without value 1`] = `
Object {
  "meta": Object {
    "_type": "rejected",
  },
}
`;

exports[`#toJSON union default arm 1`] = `
Object {
  "meta": Object {
    "_type": "pending",
    "default": "waiting for documentation",
  },
}
`;

exports[`#toJSON union with struct arm 1`] = `
Object {
  "meta": Object {
    "_type": "paid",
    "price": Object {
      "d": 1,
      "n": 2,
    },
  },
}
`;
